--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a-asset-item id="pizza-model" src="./assets/pizza/scene.gltf"></a-asset-item>
             </a-assets>
 
-            <a-marker id="pizza-marker" type="pattern" url="patterns/pattern-pizza.patt" cursor="rayOrigin: mouse">
+            <a-marker id="pizza-marker" type="pattern" url="patterns/pattern-pizza.patt">
                 <a-entity id="pizza" gltf-model="#pizza-model" scale="0.5 0.5 0.5" position="-2 0 0" gesture-handler></a-entity>
             </a-marker>
         </a-scene>
