--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
-        <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
     </head>
 
     <body style="margin: 0px; overflow: hidden;">
@@ -21,11 +19,21 @@
             <a-entity camera></a-entity>
 
             <a-assets>
-                <a-asset-item id="pizza-model" src="./assets/pizza/scene.gltf"></a-asset-item>
+                <img id="croissant" src="./assets/1.png">
+                <img id="sushi" src="./assets/2.png">
+                <img id="pizza" src="./assets/3.png">
             </a-assets>
 
+            <a-marker id="croissant-marker" type="pattern" url="patterns/pattern-croissant.patt">
+                <a-plane src="#croissant"></a-plane>
+            </a-marker>
+
+            <a-marker id="sushi-marker" type="pattern" url="patterns/pattern-sushi.patt">
+                <a-plane src="#sushi"></a-plane>
+            </a-marker>
+
             <a-marker id="pizza-marker" type="pattern" url="patterns/pattern-pizza.patt">
-                <a-entity id="pizza" gltf-model="#pizza-model" scale="0.5 0.5 0.5" position="-2 0 0" gesture-handler></a-entity>
+                <a-plane src="#pizza"></a-plane>
             </a-marker>
         </a-scene>
     </body>
