--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             </a-assets>
 
             <a-marker id="croissant-marker" type="pattern" url="patterns/pattern-croissant.patt">
-                <a-plane src="#croissant"></a-plane>
+                <a-plane src="#croissant" position="0 0 -1" width="1.5" height="3" rotation="-90 0 0"></a-plane>
             </a-marker>
 
             <a-marker id="sushi-marker" type="pattern" url="patterns/pattern-sushi.patt">
-                <a-plane src="#sushi"></a-plane>
+                <a-plane src="#sushi" position="0 0 -1" width="1.5" height="3" rotation="-90 0 0"></a-plane>
             </a-marker>
 
             <a-marker id="pizza-marker" type="pattern" url="patterns/pattern-pizza.patt">
-                <a-plane src="#pizza"></a-plane>
+                <a-plane src="#pizza" position="0 0 -1" width="1.5" height="3" rotation="-90 0 0"></a-plane>
             </a-marker>
         </a-scene>
     </body>
